--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Dushime Paulette - Junior Software Engineer</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <nav id="navbar">
+      <div class="container">
+        <h1 class="logo"><a href="index.html">DP</a></h1>
+        <ul class="nav-menu" id="nav-menu">
+          <li><a href="index.html" class="current">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script src="script.js"></script>
+  </body>
 </html>
