added header and also with some content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
         </ul>
       </div>
     </nav>
+
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-content">
+          <h1>Dushime Paulette</h1>
+          <h2>Junior Software Engineer</h2>
+          <p>
+            I am passionate about creating innovative solutions through code.
+            Also open to train ships, internships and many more.
+          </p>
+          <a href="#about" class="btn">Learn More</a>
+        </div>
+      </div>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
