--- a/index.html
+++ b/index.html
@@ -31,6 +31,58 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section id="about">
+        <div class="container">
+          <h2>About Me</h2>
+          <div class="about-content">
+            <img
+              src="images/pau.jpg"
+              alt="Dushime Paulette"
+              class="profile-img"
+            />
+            <p>
+              I'm currently a student at African Leadership University (ALU),
+              pursuing a Bachelor's degree in Software Engineering. With a
+              passion for web development, I'm seeking opportunities to join a
+              dynamic team where I can continue to improve my skills while
+              making a real impact in the world of technology. I also did a
+              bootcamp called SheCodes Plus and learnt more of front-end web
+              development.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="skills">
+        <div class="container">
+          <h2>Skills</h2>
+          <div class="skills-content">
+            <div class="skill">
+              <i class="fab fa-html5"></i>
+              <h3>HTML5</h3>
+            </div>
+            <div class="skill">
+              <i class="fab fa-css3-alt"></i>
+              <h3>CSS3</h3>
+            </div>
+            <div class="skill">
+              <i class="fab fa-js"></i>
+              <h3>JavaScript</h3>
+            </div>
+            <div class="skill">
+              <i class="fas fa-mobile-alt"></i>
+              <h3>Responsive Design</h3>
+            </div>
+            <div class="skill">
+              <i class="fab fa-git-alt"></i>
+              <h3>Git</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
