--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         </div>
       </section>
     </main>
+
+    <footer id="main-footer">
+      <div class="container">
+        <p>&copy; 2024 Dushime Paulette. All rights reserved.</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
