--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,46 @@
         </ul>
       </div>
     </nav>
+
+    <main>
+      <section id="contact">
+        <div class="container">
+          <h2>Get In Touch</h2>
+          <div class="contact-form">
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+              </div>
+              <button type="submit" class="btn">Send Message</button>
+            </form>
+          </div>
+          <div class="contact-info">
+            <div class="info-item">
+              <i class="fas fa-envelope"></i>
+              <p>dushimepaulette36@gmail.com</p>
+            </div>
+            <div class="info-item">
+              <i class="fab fa-linkedin"></i>
+              <p>linkedin.com/in/paulette-dushime-1581bb319/</p>
+            </div>
+            <div class="info-item">
+              <i class="fab fa-github"></i>
+              <p>github.com/Dushimepaulette1</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
