--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,12 @@
       </section>
     </main>
 
+    <footer id="main-footer">
+      <div class="container">
+        <p>&copy; 2024 Dushime Paulette. All rights reserved.</p>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
