--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav id="navbar">
+      <div class="container">
+        <h1 class="logo"><a href="index.html">DP</a></h1>
+        <ul class="nav-menu" id="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html" class="current">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
