--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,13 @@
         </ul>
       </div>
     </nav>
+
+    <header id="portfolio-header">
+      <div class="container">
+        <h1>My Projects</h1>
+        <p>Explore my latest Projects</p>
+      </div>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
