--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,115 @@
         <p>Explore my latest Projects</p>
       </div>
     </header>
+
+    <main>
+      <section id="portfolio">
+        <div class="container">
+          <div class="project-filters">
+            <button class="filter-btn active" data-filter="all">All</button>
+            <button class="filter-btn" data-filter="web">Web</button>
+            <button class="filter-btn" data-filter="other">Other</button>
+          </div>
+          <div class="projects">
+            <div class="project-card" data-category="web">
+              <img src="images/weather project.png" alt="Weather Application" />
+              <div class="project-info">
+                <h3>Weather Project</h3>
+                <p>
+                  A comprehensive weather app that displays current temperature
+                  and time for countries worldwide.
+                </p>
+                <div class="project-tech">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                  <span>API</span>
+                </div>
+                <a
+                  href="https://forecast-weather-app-shecodes-pau.netlify.app/"
+                  class="btn"
+                  target="_blank"
+                  >View Project</a
+                >
+              </div>
+            </div>
+            <div class="project-card" data-category="web">
+              <img
+                src="images/counter.png"
+                alt="The Counter Project"
+                width=""
+              />
+              <div class="project-info">
+                <h3>The Counter Project</h3>
+                <p>
+                  An interactive counter with increase, decrease, and reset
+                  functionality.
+                </p>
+                <div class="project-tech">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
+                <a
+                  href="https://counter-project-app.netlify.app/"
+                  class="btn"
+                  target="_blank"
+                  >View Project</a
+                >
+              </div>
+            </div>
+            <div class="project-card">
+              <img
+                src="images/FORECAST.jpg"
+                alt="Weather with Forecast"
+                width="800"
+              />
+              <div class="project-info">
+                <h3>Weather with Forecast</h3>
+                <p>
+                  A weather Project showing temperatures and forecasts for
+                  cities globally.
+                </p>
+                <div class="project-tech">
+                  <span>Html</span>
+                  <span>Css</span>
+                  <span>JavaScript</span>
+                  <span>API</span>
+                </div>
+                <a
+                  href="https://weather-app-with-forecast-shecodes.netlify.app/"
+                  class="btn"
+                  target="_blank"
+                  >View Project</a
+                >
+              </div>
+            </div>
+            <div class="project-card" data-category="other">
+              <img src="images/World-Clock-2.png" alt="World Clock Project" />
+              <div class="project-info">
+                <h3>World Clock Project</h3>
+                <p>
+                  A dynamic world clock displaying time in various cities and
+                  the user's local time.
+                </p>
+                <div class="project-tech">
+                  <span>Html</span>
+                  <span>Css</span>
+                  <span>JavaScript</span>
+                  <span>moment.js</span>
+                </div>
+                <a
+                  href="https://world-clock-dushime-paulette.netlify.app/"
+                  class="btn"
+                  target="_blank"
+                  >View Project</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
