--- a/portfolio.html
+++ b/portfolio.html
@@ -133,6 +133,13 @@
         </div>
       </section>
     </main>
+
+    <footer id="main-footer">
+      <div class="container">
+        <p>&copy; 2024 Dushime Paulette. All rights reserved.</p>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
